# python-framework

./: .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_DETAILS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PERFORMANCE.md  README.md  SETUP_GUIDE.md  docker-compose.yml  docker-entrypoint.sh  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements-ml.txt  requirements.txt  setup.bat  setup.sh  sonar-project.properties
.github/workflows/: ci.yml
deployments/: README.md
deployments/docker/: Dockerfile.dev  README.md
deployments/kubernetes/base/: configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  secrets.yaml  service.yaml  serviceaccount.yaml
deployments/kubernetes/overlays/dev/: configmap-patch.yaml  deployment-patch.yaml  kustomization.yaml
deployments/kubernetes/overlays/prod/: configmap-patch.yaml  deployment-patch.yaml  hpa-patch.yaml  kustomization.yaml
deployments/kubernetes/overlays/staging/: configmap-patch.yaml  deployment-patch.yaml  kustomization.yaml
deployments/scripts/: README.md  deploy.sh
docs/: index.md
docs/architecture/: overview.md
docs/deployment/: runbook.md
docs/getting-started/: development-setup.md  installation.md  production-setup.md  quick-start.md  setup-comparison.md  testing-setup.md
docs/infrastructure/: integration-guide.md
docs/multi-repo/: INSTALLATION.md  README.md
examples/api-gateway/: README.md  main.py
examples/basic_service/: README.md  main.py
examples/event-driven-service/: README.md  main.py
examples/i18n-service/: README.md  main.py
examples/multi-repo-service/: Dockerfile  README.md  requirements.txt
examples/multi-repo-service/.github/workflows/: ci.yml
examples/multi-repo-service/k8s/: deployment.yaml
examples/multi-repo-service/src/my_service/: __init__.py  main.py
helm/saas-framework/: Chart.yaml  README.md  values.yaml
helm/saas-framework/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secrets.yaml  service.yaml  serviceaccount.yaml
k8s/base/: configmap.yaml  namespace.yaml  secrets.yaml
k8s/monitoring/prometheus/: prometheus.yml
k8s/services/api-service/: deployment.yaml
scripts/: check-status.sh  validate-setup.sh
src/framework/: __init__.py
src/framework/auth/: __init__.py
src/framework/cache/: __init__.py  decorators.py  redis.py
src/framework/common/: __init__.py  performance.py  types.py  utils.py  validators.py
src/framework/common/libs/: __init__.py  collection_utils.py  date_utils.py  retry.py  security.py  string_utils.py
src/framework/core/: __init__.py  application.py  config.py  dependencies.py  exceptions.py  middleware.py
src/framework/database/: __init__.py
src/framework/gateway/: __init__.py  gateway.py  load_balancer.py  middleware.py
src/framework/i18n/: __init__.py  locale.py  translator.py
src/framework/messaging/: __init__.py  events.py  rabbitmq.py
src/framework/ml/: __init__.py
src/framework/observability/: __init__.py  logging.py  metrics.py  tracing.py
src/framework/services/: __init__.py  base.py  registry.py
tests/: conftest.py
tests/unit/test_cache/: test_decorators.py  test_redis.py
tests/unit/test_common/: test_common.py
tests/unit/test_core/: test_application.py  test_config.py  test_dependencies.py  test_exceptions.py  test_middleware.py
tests/unit/test_gateway/: test_gateway.py  test_load_balancer.py
tests/unit/test_messaging/: test_events.py  test_rabbitmq.py
tests/unit/test_observability/: test_observability.py
tests/unit/test_services/: test_services.py
translations/: en_US.json  vi_VN.json
