[tool.poetry]
name = "saas-framework"
version = "0.1.0"
description = "Production-ready Python framework for AI/SaaS projects with microservices architecture"
authors = ["SaaS Framework Team"]
license = "MIT"
readme = "README.md"
packages = [{include = "framework", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.127.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
pydantic = "^2.12.0"
pydantic-settings = "^2.12.0"
sqlalchemy = "^2.0.45"
alembic = "^1.17.0"
asyncpg = "^0.31.0"
redis = {extras = ["hiredis"], version = "^7.0.0"}
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.21"
aiohttp = "^3.13.0"
httpx = "^0.28.0"
structlog = "^25.5.0"
prometheus-client = "^0.23.0"
opentelemetry-api = "^1.39.0"
opentelemetry-sdk = "^1.39.0"
opentelemetry-instrumentation-fastapi = "^0.60b0"
aiokafka = "^0.12.0"
aio-pika = "^9.5.0"
tenacity = "^9.1.0"
psutil = "^7.0.0"

[tool.poetry.group.ml]
optional = true

[tool.poetry.group.ml.dependencies]
torch = {version = "^2.9.0", optional = true}
transformers = {version = "^4.57.0", optional = true}
mlflow = {version = "^3.8.0", optional = true}
onnxruntime = {version = "^1.23.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
pytest-mock = "^3.15.0"
hypothesis = "^6.148.0"
faker = "^39.0.0"
mypy = "^1.19.0"
ruff = "^0.14.0"
pre-commit = "^4.5.0"
httpx = "^0.28.0"
types-redis = "^4.6.0.11"
types-passlib = "^1.7.7.14"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.7.0"
mkdocstrings = {extras = ["python"], version = "^1.0.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src/framework",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=90"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "aiokafka.*",
    "aio_pika.*",
    "mlflow.*",
    "transformers.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "N",      # pep8-naming
    "YTT",    # flake8-2020
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit
    "BLE",    # flake8-blind-except
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "PIE",    # flake8-pie
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # pylint
    "RUF",    # ruff-specific rules
]
ignore = [
    "S101",   # Allow assert statements
    "PLR0913", # Too many arguments
    "COM812", # Trailing comma missing (conflicts with formatter)
    "S104",   # Allow binding to all interfaces (0.0.0.0)
    "N818",   # Allow Exception suffix variations
    "PLC0415", # Allow imports inside functions for validation
    "ARG002", # Allow unused arguments in abstract methods
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PLR2004", "S106"]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["framework"]

[tool.ruff.lint.pydocstyle]
convention = "google"
